data/all_generated_tests/raw_wast_tests/block_InvalidorInconsistentControlFlowGraph_2387.wast
;; 8. **Test Description**: Implement a block where an inner block is missing the correct result type at the end.    - **Constraint**: Ensure that the result type of inner blocks aligns with what is expected.    - **CFG Relation**: Ensures the CFG properly enforces stack height and types at block boundaries.

(assert_invalid
  (module (func $inner-block-missing-result-type (result i32)
    (block (result i32)
      (block (result i32) (i32.const 42)) (nop)
    )
  ))
  "type mismatch"
)